--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="MicroConsultas - Marketplace de Micro-Consultorías Técnicas Flash. Conecta con expertos técnicos en tiempo real para resolver problemas de programación en sesiones rápidas." />
+    <meta name="keywords" content="consultoría técnica, programación, expertos técnicos, soluciones rápidas, desarrollo software" />
     <title>MicroConsultas - Marketplace de Micro-Consultorías Técnicas Flash</title>
   </head>
   <body>
